tests/shouldFail/j060a.c
int main(void){
	int f();
}
